# MarketCompass-AI

./: .gitignore  README.md  pyproject.toml
output/: decision.md  research_report.json  trending_companies.json
src/market_compass/: crew.py  main.py
src/market_compass/tools/: custom_tool.py
src/stock_picker/: crew.py  main.py
src/stock_picker/config/: agents.yaml
src/stock_picker/tools/: custom_tool.py
