[project]
name = "market_compass"
version = "0.1.0"
description = "market_compass using crewAI"
authors = [{ name = "Alan Shaji", email = "alanshaji46@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,litellm]==1.12.2",
    "langsmith>=0.8.15",
    "openinference-instrumentation-crewai>=1.1.9",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "tzdata>=2026.2",
]

[project.scripts]
market_compass = "market_compass.main:run"
run_crew = "market_compass.main:run"
train = "market_compass.main:train"
replay = "market_compass.main:replay"
test = "market_compass.main:test"
run_with_trigger = "market_compass.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
